@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2020, Oracle and/or its affiliates.
+ * Copyright (c) 2018, 2021, Oracle and/or its affiliates.
  *
  * This program is free software; you can redistribute it and/or modify it under
  * the terms of the GNU General Public License, version 2.0, as published by the
@@ -50,23 +50,21 @@ public class Notice implements ProtocolEntity {
 
     public static Notice getInstance(XMessage message) {
         Frame notice = (Frame) message.getMessage();
-        if (notice.getScope() != Frame.Scope.GLOBAL) { // TODO should we handle global notices somehow? What frame types are applicable there?
-            switch (notice.getType()) {
-                case Frame.Type.WARNING_VALUE:
-                    return new XWarning(notice);
+        switch (notice.getType()) {
+            case Frame.Type.WARNING_VALUE:
+                return new XWarning(notice);
 
-                case Frame.Type.SESSION_VARIABLE_CHANGED_VALUE:
-                    return new XSessionVariableChanged(notice);
+            case Frame.Type.SESSION_VARIABLE_CHANGED_VALUE:
+                return new XSessionVariableChanged(notice);
 
-                case Frame.Type.SESSION_STATE_CHANGED_VALUE:
-                    return new XSessionStateChanged(notice);
+            case Frame.Type.SESSION_STATE_CHANGED_VALUE:
+                return new XSessionStateChanged(notice);
 
-                case Frame.Type.GROUP_REPLICATION_STATE_CHANGED_VALUE:
-                    // TODO
-                    break;
-                default:
-                    break;
-            }
+            case Frame.Type.GROUP_REPLICATION_STATE_CHANGED_VALUE:
+                // TODO
+                break;
+            default:
+                break;
         }
         return new Notice(notice);
     }
